--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,12 +1,6 @@
-body,ul,li,a{
-    margin: 0px;
-    padding: 0px;
-    list-style:none;
-    text-decoration: none;				
-}/*取消所有表格的格式*/
 html{
     scroll-behavior: smooth;
-    scroll-padding-top: 90px;/*防止导航栏覆盖*/
+    scroll-padding-top: 90px;
 }
 body{
     background-color: #ffffff;
@@ -14,18 +8,29 @@ body{
 /*头部样式*/
 header{
     width: 100%;
-    height: 60px;
-    /*background-color: #fff;*/
-    margin-bottom: 20px;
-    /*box-shadow: 0px  5px 5px #ccc;/*模糊度5px 外延值5px*/
-    /* transform-style: inherit; */
 }
 
+/*进度条*/
+.top-progress-block{
+    width: 100%;
+    height: 8px;
+}
+.top-progress{
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 8px;
+    background:linear-gradient(
+        to left,
+        #009fd9, 
+        rgb(174, 238, 236)
+    );
+    z-index: 1000;
+}
 nav{
     position: fixed;
     width: 100%;
     height: 60px;
-    /*border: 1px solid greenyellow;*/
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -33,21 +38,12 @@ nav{
     z-index: 100000;
     padding: 10px 0px;
 }
-/* header>div>div{   /*等价于 .top>div*/
-    /*border: 1px solid darkred;
-} */
-/* nav.sticky{
-    padding: 5px 100px;
-    background-color:#fff;
-    position:fixed;
-} */
 nav.sticky {
     position: fixed;
     background-color: white;
     box-shadow: 0px  5px 5px #ccc;
     box-shadow: 0 0 18px rgba(0, 0, 0, 0.2);
     animation: dropDown 0.5s ease-in-out forwards;
-    
 }
 nav.sticky>div>ul>li>a,
 nav.sticky>div>ul>li>div>ul>li{
@@ -73,12 +69,11 @@ nav.sticky>div>ul>li>div>ul>li{
     position: relative;
     margin-left: 16vh;
     transform: scale(0.8);
-    /* margin-right: 30px; */
 }
 .top_center{
     flex-grow: 8;
 }
-.top_center>ul{/*同样的效果*/
+.top_center>ul{
     height: 55px;
     display: flex;
     align-items: center;
@@ -89,17 +84,16 @@ nav.sticky>div>ul>li>div>ul>li{
 }
 .top_center>ul>li{
     float: left;
-    position:relative;/*相对定位*/
+    position:relative;
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
     width: 135px;
-    /* transition:all 1s ease-in-out;  */
     padding: 10px 0;
     
 }
 .top_center>ul>li>a{
-    color: rgb(0, 0, 0);/*alpha是 rgba() 中的 a 值 [r: 红色, g: 绿色, b: 蓝色, a: alpha值]，rgb 的取值范围在 0~255 之间，a 的取值范围在 0~1 之间(可以是小数). 其中a值规定色彩的透明度：0; 完全不透明, 0.5: 半透明, 1: 完全透明*/
+    color: rgb(0, 0, 0);
     font-family: "Microsoft YaHei";
     font-weight:bolder;
     /* padding: 10px; */
@@ -122,34 +116,21 @@ nav.sticky>div>ul>li>div>ul>li{
 a:hover{
     animation: bounce 0.2s ease-in-out;
 }
-/* .top_center>ul>li>a:hover {
-    animation: bounce 0.5s ease-in-out;
-} */
+
 
 #arrows{
     height: 12px;
     line-height: 25px;
     text-align: center;
-    /* padding-left: 100px; */
 }
 .top_center>ul>li:hover>a>img{ /*通过改变hover的层级控制*/
     transform: rotate(45deg);
 }
 
-/* .top_center>ul>li>a{
-    width:100%;
-    margin: 0 auto;
-} */
-
-
 .top_center>ul>li:nth-child(1):hover,.top_center>ul>li:nth-child(4):hover,.top_center>ul>li:nth-child(5):hover{
-    /* transition: all 1s ease-in-out; */
-    /* transform: scale(1.05); */
-    /* transition: all 0.5s ease-in-out; */
     animation: bounce 0.2s ease-in-out;
 }
 .top_center>ul>li>div{
-    /* transition: all 0.5s ease-in-out; */
     display: none;
     /*border: 2px solid red;*/
     position:absolute;/*固定位置，防止挤掉上面的*/
@@ -168,9 +149,6 @@ a:hover{
     display: block;
     z-index: 1;/*显示在最上层*/
     opacity:1;
-    /* -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    -o-transition: all 0.2s ease-in-out;*/
     transition: all 0.2s ease-in-out;
      
 }
@@ -184,9 +162,6 @@ a:hover{
     
     /* left:45px; */
 }
-/*.top_center>ul>li:hover>div{
-    display: block;可伸缩
-}*/
 
 .top_center>ul>li>div>ul>li{
 
@@ -208,48 +183,11 @@ a:hover{
     border-radius: 10px;
     margin: 5px 5px;    
 }
-/* .top_center>ul>li>div>ul>li{把a当作一个伸缩盒，问题解释见网页设计问题T10
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-} */
+
 .top_center>ul>li>div>ul>li>a{
     text-decoration: none;
     color: inherit;
 }
-
-
-#title{
-    position: absolute;
-    margin-top:15vh;
-    width: 100%;
-    
-}
-#title>p{
-    font-size: 5em;
-    color: #fff;
-    /*background: rgba(0, 0, 0, 0.526);*/
-    font-family: "Microsoft YaHei";
-    font-weight:bolder;
-    position: relative;
-    text-align: center;
-}
-/*header::before*/
-/*.banner{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    background-image: url(../img/Description_cover1.png);
-    background-size: cover;/*应该是覆盖整个容器*/
-    /* z-index: -1; */
-    /* clip: rect(25px 0px 5px 0px); */
-    /* top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0; */
-    /*核心实现视差效果*/
-    /* transform: translateZ(-1px); 
-}*/
 
 
 /*pc端*/
@@ -326,12 +264,6 @@ a:hover{
         flex: 0 0 auto;
     }
     .content_left{
-        /* position: sticky;
-        margin: 0px;
-        padding: 10px;
-        top: 200px;
-        flex: 0 0 auto; */
-        /* width: 16.7%; */
         min-width: 100%;
         width: 90%;
         margin: 16px 0px!important;
@@ -339,9 +271,6 @@ a:hover{
     .content_right{
         min-width: 100%;
         width: 90%;
-    }
-    footer{
-        height: 250px;
     }
     .bottom{
         height: 220px;
@@ -436,33 +365,6 @@ a:hover{
     }
     
 }
-
-  /*****************************************
-                Navigation
-   *****************************************/
-  
-   /* .dropdown-menu {
-    background-color: var(--turquoise);
-    animation: growDown 300ms ease-in-out forwards;
-    transform-origin: top center;
-    border-radius: 0;
-    border-color: white;
-    border-width: 1px;
-  }
-  
-  .dropdown-item:hover {
-    background-color: var(--violet);
-    color: var(--darkBlue);
-  }
-  
-  @keyframes growDown {
-    0% {
-      transform: scaleY(0)
-    }
-  
-    80% {
-      transform: scaleY(1.1)
-    }
   
     100% {
       transform: scaleY(1)
