--- a/CSS/teammember.css
+++ b/CSS/teammember.css
@@ -1,4 +1,13 @@
-
+:root{
+    --header-font:"Kanit", sans-serif;
+    --body-font:"Helvetica Neue";
+    --pblue:#4154CD; 
+    --bblue:#3980FE; 
+    --sblue:#63A6F7; 
+    --lblue:#59CEFF;
+    --orange:#ff8e3a;
+    --cyan:#5FCAC8;
+}
   body>div.container {
       margin-left: auto;
       width: 100%;
