--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -1,137 +1,411 @@
-footer{
-    margin: 0px auto;
-    /* background: radial-gradient(circle, rgba(174,238,187,1) 0%, rgba(0,108,255,0.8998949921765581) 100%); */
-    flex: 0 0 auto;
-    /* border: 1px solid blue; */
-    /* background-image: url(../img/wave（bottom）.png);
-    background: cover;
-    width: 100%; */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none
 }
-.bottom{
-    margin-top: 200px;
-    height: 200px;	
-    width: 80%;
-    margin: 0px auto;
+::selection {
+    background: #f3c600!important;
+    color: #25fb7e!important;
+}
+a {
+    outline: 0;
+    text-decoration: none
+}
+
+strong {
+    font-weight: 400
+}
+
+.strong {
+    font-weight: 700
+}
+
+
+
+img {
+    border: 0
+}
+
+
+.autoWidth {
+    margin: 0 auto;
+    min-width: 1000px;
+    max-width: 1200px
+}
+
+.auto {
+    margin: 0 auto;
+    min-width: 1000px;
+    max-width: 1200px
+}
+
+@media screen and (max-width:1233px) {
+    .auto {
+        padding-left: 10px
+    }
+}
+
+.clearfix:after,
+.clearfix:before {
+    display: table;
+    line-height: 0;
+    content: ""
+}
+
+.clearfix:after {
+    clear: both
+}
+
+.clear-float {
+    clear: both
+}
+
+
+
+.footer {
+    width: 100%;
+    /* background-color: #009fd9; */
+    background: linear-gradient(to bottom, #009fd9, rgb(174, 238, 236));
+    font-family: "Microsoft Yahei";
+}
+
+.footer-floor1 {
+    width: 100%;
+    padding: 20px 0 30px;
+    display: flex;
+}
+
+.footer-list {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    /* border: 2px solid green; */
-
-}
-.bottom_left{
-    /*width: 100%;*/
-    flex-grow:4;
-    position: relative;
-    /* border: 1px solid red; */
-}
-.bottom_left>img{
-    width: 80px;
-    /* margin-top: -35px; */
-    position: absolute;
-    left: 42%;
-    z-index: 5;
-}
-.bottom_left>p{
-    margin-top: 60px;
-    padding: 10px 10px;
-    border-radius: 20px;
-    background-color: rgba(255, 255, 255, 0);
-	backdrop-filter: blur(5px);
-    border: #8492a6;
-}
-.bottom_center{
-    /*width: 100%;*/
-    flex-grow:4; 
-    /* border: 1px solid red; */
-    display: flex;
-    justify-content: space-around;
-    min-width: 40%;/*我也不知道为什么宽度容易改变，但是设置最小宽度就解决了*/
-    
+    /* flex-wrap: wrap; */
 }
 
-.bottom_left>p,.bottom_center>div>ul>li,.bottom_right>section{
-    /* border: 1px solid red; */
-    font-size: 12px;
-    font-family: "Microsoft YaHei";
-    font-weight:bolder;
-    color: rgba(85, 85, 127, 0.57)	
+.footer-list ul {
+    /* margin-right: 2%; */
+    background-color: #ffffff40;
+    text-align: center;
+    padding: 10px;
+    border-radius:15px;
 }
-.bottom_center>div>ul>li{
-    margin-top: 6px;
-}
-.bottom_left>p{
-    text-indent: 2rem;
-}
-.bottom_right{
-    /*width: 100%;*/
-    flex-grow:1;
-    /* border: 1px solid red; */
-    display: flex;
-    justify-content: space-around;
-    /* height: 100px;
-    line-height: 100px; */
-}
-/* .bottom_right1{
+.footer-list>ul>img{
     height: 100px;
-    line-height: 124.8px;
-} */
-.bottom_right1>img{
-    height: 90px;
-    margin-top: 20px;
-    margin-bottom: 15px;
 }
-.bottom_right2>img{
-    height: 124.8px;
-}
-.bottom_right1>section,.bottom_right2>section{
-    text-align: center;
-    bottom: 0;
+.footer-figure{
+    margin-bottom: 20px;
+    margin: 0 auto;
+    color: #2990cc;
 }
 
-.footer_bottom{
-    width: 80%;
-    height: 20px;
-    margin: 0px auto;
+.footer-center{
+    width:40% ;
+    display: flex;
+    flex-direction: column;
     
-    /* border: 1px solid red; */
+}
+.footer-center ul{
+    margin-top: 20px;
+    margin: auto 10px;
+}
+.Sponsor-row{
+    display: flex;
+    overflow-x: auto;
+}
+/*滚动条样式*/
+.Sponsor-row::-webkit-scrollbar{
+    width:10px;
+    height: 10px;
+    background-color: rgba(249, 249, 249, 0);
+    border-radius: 10px;
+}
+/*滚动条轨道样式*/
+.Sponsor-row::-webkit-scrollbar-track{
+    box-shadow:inset 0 0 0px rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    background-color: rgba(247, 247, 247, 0.1);
+}
+/*滑块样式*/
+.Sponsor-row::-webkit-scrollbar-thumb{
+    box-shadow:inset 0 0 0px rgba(104, 158, 241, 0.508);
+    border-radius: 10px;
+    background-color: rgba(86, 143, 251, 0.195);
+}
+.Sponsor-column{
+    display: flex;
+    flex-direction: column;
+    margin:0px 5px;
+}
+.Sponsor-column>img{
+    height:50px
+}
+.footer-floor2 {
+    width: 100%;
+    border-top: 1px solid #4cc3ed;
+    padding: 20px 0;
+    text-align: center
+}
+
+.footer-floor2 p {
+    text-align: center;
+    color: #3ea7e3;
+    font-size: 16px;
+    line-height: 30px;
+}
+
+.footer-floor2 p span {
+    font-family: PingFangSC-Light, 'helvetica neue', 'hiragino sans gb', tahoma, 'microsoft yahei ui', 'microsoft yahei', simsun, sans-serif
+}
+
+
+.footer-floor2 a {
+    position: relative;
+    color: #009fd9;
+    background-image: linear-gradient( #1256f6, #4cc3ed);
+    background-position: 0 100%;background-size: 0 1px;background-repeat: no-repeat;transition: background-size .5s;
+    
+}
+
+.footer-floor2 a:hover {
+    /* color: #2937cc; */
+    background-size: 100% 1px; color: #4cc3ed;
+    
+}
+
+
+.foot-you{
+    /* height: 200px; */
+    /* float: right; */
+    display: flex;
+    flex-direction: column;
+    z-index: 10000;
+    /* margin-right: 10px; */
+    /* margin-top: -5px; */
+}
+.footer-right {
+    background-color: rgba(255, 255, 255, 0.3);
+    margin: 0px 10px;
+    margin-top: 10px;
+    padding: 18px;
+    border-radius:15px;
+}
+
+.telephone {
+    width: 100%;
+    height: 32px;
+    line-height: 32px;
+    color: #f5f5f5;
+    margin-right: 8px;
+}
+
+
+
+.telephone .tel-number {
+    font-size: 24px;
+    font-weight: 500;
     text-align: center;
 }
-.bottom_center a{
-    color: rgba(85, 85, 127, 0.57)	;
-}
-.bottom_bg{
-    position: absolute;
+
+.official-plat {
     width: 100%;
-    margin-top: -370px;
-    z-index: -1;
+    height: 100%;
+    margin-top: 10px;
+    /* position: relative; */
+   
 }
-/* .fab{
-    position: fixed;
-    direction: ltr;
-    right: 2.22222222vw;
-    bottom: 1.66666667vw;
-    z-index: 2500;
-    width: 48px;
-    height: 48px;
-    font-size: 0;
-    background-color: rgba(0,0,0,0.5);
-    border-radius: 50%;
-    opacity: 0;
-    visibility: hidden;
-    transition: visibility .1s .2s,opacity .2s cubic-bezier(0.4, 0, 0.2, 1);
-} */
-.back_to_top{
-    position: fixed;
-    bottom: 10vh;
-    right: 5vw;
+.official-plat ul{
+    position: relative;
+    display: flex;
+    justify-self: center;
+    justify-content: flex-between;
+}
+.official-plat ul a{
+    margin-right: 12px;
+    /* float: right; */
+}
+.official-plat span{
+    font-size:40px;
+    text-align: center;
+    color: #fff;
+    height: 40px;
+    line-height: 16px;
+    margin-top: -10px;
+    vertical-align: m;
+}
+.official-plat div{
+    display: flex;
+    margin: 0px 10px;
+}
+.official-plat div a{
+    font-size:40px;
+    text-align: center;
+    color: #fff;
+    background-image: linear-gradient( #1256f6, #1256f6);
+    background-position: 50% 100%;
+    background-size: 0 15px;
+    background-repeat: no-repeat;
+    transition: background-size .5s;
+    height: 50px;
+    margin-left: 10px;
 
 }
-.back_to_top>a>img{
-	position:absolute;
-	fill: blue;
-	height: 40px;
-    z-index: 1;
+
+.official-plat div a:hover {
+
+    /* color: #2937cc; */
+    background-size: 100% 15px; 
+    color: #fff;
+    
 }
-.back_to_top:hover{
-	transition: all .3s ease-in-out;
+
+/* .contact{
+    display: flex;
+    flex-direction: row;
+} */
+/* .nev{
+    position: absolute;
+    font-size: 16px;
+    line-height: 35px;
+    align-items: center;
+    justify-content: flex-between;
+    align-self: flex-end;
+    width: 100%;
+} */
+
+
+
+
+.compensate_ico .superiority-icon {
+    background-position: 0 0
+}
+
+.compensate_ico:hover .superiority-icon {
+    background-position: 0 -50px
+}
+
+.retreat_ico .superiority-icon {
+    background-position: 0 -100px
+}
+
+.retreat_ico:hover .superiority-icon {
+    background-position: 0 -150px
+}
+
+.technology_ico .superiority-icon {
+    background-position: 0 -200px
+}
+
+.technology_ico:hover .superiority-icon {
+    background-position: 0 -250px
+}
+
+.prepare_ico .superiority-icon {
+    background-position: 0 -300px
+}
+
+.prepare_ico:hover .superiority-icon {
+    background-position: 0 -350px
+}
+
+.service_ico .superiority-icon {
+    background-position: 0 -400px
+}
+
+.service_ico:hover .superiority-icon {
+    background-position: 0 -450px
+}
+
+.marquee-box {
+    overflow: hidden;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 0
+}
+
+.marquee {
+    width: 8000%;
+    height: 60px
+}
+
+.wave-list-box {
+    float: left
+}
+
+.wave-list-box ul {
+    float: left;
+    height: 60px;
+    overflow: hidden;
+    zoom: 1
+}
+
+.wave-list-box ul li {
+    height: 60px;
+    width: 100%;
+    float: left;
+    line-height: 30px;
+    list-style: none
+}
+
+.wave-box {
+    width: 100%;
+    position: relative;
+    height: 60px;
+    background: #ffffff00
+}
+
+.chong_member{
+    position: fixed;
+    bottom:-150px;
+    right: -120px;
+    
+}
+.chong_menu{
+    flex-wrap: wrap;
+    position: relative;
+    width: 500px;
+    height: 500px;
+    /* background: #8460ed; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-bottom: 50px;
+    margin-top: -50px; */
+    
+}
+.chong_menu li{
+    position: absolute;
+    left: 150px;
+    list-style: none;
+    transform-origin: 100px;
+    transition: 0.5s linear;
+    transition-delay: calc(0.1s*var(--i)+45deg);
+    transform: rotate(0deg) translateX(90px)
+}
+.chong_menu.active li{
+    transform: rotate(calc(360deg/8*var(--i)));
+}
+.chong_menu .mImg li img{
+    border-radius: 50%;
+    width: 35px;
+    transform: rotate(calc(360deg/-8*var(--i)));
+}
+
+.chong_toggle{
+    /* top: 50%; */
+    z-index: 100;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 1.2s ease-in-out;
+}
+.chong_toggle>img{
+    height: 140px;
+    -webkit-user-drag: none;
+    margin-top: 45px;
+    margin-left: 14px;
 }
