--- a/CSS/home.css
+++ b/CSS/home.css
@@ -5,41 +5,47 @@ body,ul,li,a{
     text-decoration: none;				
 }/*取消所有表格的格式*/
 body{
-    background-color: #ffffff;
-    /* background-image: url(../img/Team.jpg);
-    top:0; left: 0;
-    z-index: -1;
-    height: 100%;
-    width:100%;
-    object-fit: cover; */
+    background-image: url(https://static.igem.wiki/teams/4927/wiki/home/background-bg.jpg);
+	/* background-color:#6f4e4e; */
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
     scroll-behavior: smooth;
+    scroll-padding-top: 90px;/*防止导航栏覆盖*/
+}
+.content-introduction::before{
+	content:"";
+	position:fixed;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background-color:rgb(255 255 255 / 55%);
+	transition:opacity.5s;
+	z-index:-1000;
 }
 header{
-    height: 45px!important;
+    height: 68px!important;
 }
-/* #title{
-    margin-top:50vh!important;
-    margin-left: 17vh;
+p{
+    font-size:14px;
+    line-height:1.8em;
 }
-#title p{
-    color: rgb(0, 166, 255)!important;
+.banner img{
+    width: 100%;
+    background-size: cover;/*应该是覆盖整个容器*/
 }
-.link{
+.screen{
+	margin-top:-68px;
+}
+#title{
+	width:100%;
+	position:absolute;
+	z-index:1;
 	text-align: center;
-	background-color: #0cbff6;
-	border-radius: 20px;
-	height: 35px;
-	line-height: 35px;
-    width: 80%;
+	top:25%;
+	transform:scale(1.5);
 }
-.link a{
-    font-size: 10px;
-    color: #ffffff;
-
-}
-.banner{
-    background-image: url(C:/Users/WAN铮Jerry/Pictures/Wallpaper/bg.jpg)!important;
-} */
 #timeline {
     width: 80%;
     flex: 0 0 auto;
@@ -62,12 +68,6 @@ header{
     border-left: rgba(255, 255, 255, 0);
     float: right;
 }
-/* video{
-    width:60%; 
-    padding-left: 300px;
-    padding-top:50px;
-} */
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 
 :root{
     --header-font:"Kanit", sans-serif;
@@ -84,7 +84,6 @@ header{
   font-family: 'Nunito', sans-serif;
   margin:0; padding:0;
   box-sizing: border-box;
-  /* text-transform: capitalize; *//*让其他的首字母都把写了*/
   outline: none; border:none;
   text-decoration: none;
   transition: all .2s linear;
@@ -102,16 +101,13 @@ html{
   scroll-behavior: smooth;
   font-family: Arial, Helvetica, sans-serif;
 }
-section{
-    background-color: #ffffff4d;
-}
+
 .home{
   min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-flow: column;
-  position: relative;
   z-index: 0;
   padding:2rem 9%;
   margin-top: -65px;
@@ -120,58 +116,16 @@ section{
 .home .content{
   text-align: left;
   width: 100%;
+  margin-top: 80px;
 }
 
 .home .content h3{
     font-size: 6rem;
     color:var(--bblue);
     text-transform: uppercase;
-    /* text-shadow: 0 .3rem .5rem rgba(0,0,0,.1); */
     font-family: var(--header-font);
     position: relative;
 }
-   
-/* .home .content h3::after {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    width: 10px;
-    height: 6rem;
-    background-color: var(--bblue);
-    border-radius: 2px;
-    right: 900px;
-  }
-   
-.home .content h3.ended::after {
-    animation: 1.1s cursor steps(2, jump-none) infinite;
-  }
-   
-  @keyframes cursor {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-   
-.home .content h3 span {
-    --delay: 10s;
-    display: inline-block;
-    overflow: hidden;
-    width: 0ch;
-    animation: 0.1s text-in ease-in-out forwards;
-    animation-delay: var(--delay);
-  }
-   
-@keyframes text-in {
-    from {
-      width: 0ch;
-    }
-    to {
-      width: 1ch;
-    }
-} */
 .home .content p{
   font-size: 2rem;
   color:#fff;
@@ -179,60 +133,66 @@ section{
   font-family: var(--header-font);
 }
 
-.home .video-container img{
+.home .bg-container img{
   position: absolute;
   top:0; left: 0;
   z-index: -1;
-  height: 100%;
+  height: 100vh;
   width:100%;
   object-fit: cover;
 }
 
-/* .home .controls{
-  padding:1rem;
-  border-radius: 5rem;
-  background:rgba(0, 0, 0, 0.444);
-  position: relative;
-  top:20rem;
+/* --home-arrow-- */
+.miso_scorll {
+    position: absolute;
+    bottom: 1.26rem;
+    z-index: 100;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+.miso_scorll .ico img{
+    display: block;
+    width: 3rem;
+}
+.miso_scorll .ico {
+    animation: index_tips_scroll 2s linear infinite;
+}
+@keyframes index_tips_scroll {
+    0% {
+        cy: 4;
+        opacity: 0;
+        transform: translateY(0);
+    }
+
+    45%,55% {
+        opacity: 1;
+        cy: 9;
+        transform: translateY(4px);
+    }
+
+    to {
+        cy: 14;
+        opacity: 0;
+        transform: translateY(0);
+    }
 }
 
-.home .controls .vid-btn{
-  height:2rem;
-  width:2rem;
-  display: inline-block;
-  border-radius: 50%;
-  background:#fff;
-  cursor: pointer;/*换成小水滴*/
-  /*margin:0 .5rem;
-}*/
-
-/*.home .controls .vid-btn.active{
-  background:var(--lblue);
-} */
 .content-introduction{
     max-width: 100%;
     margin: 0 auto;
-    margin-top: 80px;
-    
+    /* margin-top: 160px; */
 }
 .introduction{
     /* width: 100%;*/
     width: 80%;
     flex: 0 0 auto;
-    /* border:1px solid #ff8e3a; */
-    /* width: 100vw; */
     margin: 0 auto; 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     margin-top: 6vh;
-    /* filter: blur(2px);  */
-    /* transition: 0.3s ease 0.4s; */
     opacity: 0;
-    /* transform: translateY(-80px);
-    position: relative;*/
-
-
 }
 @keyframes floatup {
 	from {
@@ -267,8 +227,6 @@ section{
 }
 .introduction.active{
     opacity: 1;
-    /* transform: translateY(0); */
-    /* -webkit-transition: all 250ms cubic-bezier(0.02, 0.01, 0.47, 1); */
     animation: floatup 0.8s ease-in-out;
 }
 .introduction_character{
@@ -288,8 +246,6 @@ section{
     text-transform:lowercase;/*仅有小写*/
     margin: 30px 0;
     line-height: 1.5!important;
-
-    /* transform: translateY(calc(-10px * (1 - var(--progress)))) ;/*scale(calc(1.5 - (0.5 * var(--progress)))*/
     opacity: var(--progress);
 } 
 .introduction_character p{
@@ -335,9 +291,6 @@ section{
     transform: translateY(calc(-60px * (1 - var(--progress)))) scale(calc(1.8 - (0.8 * var(--progress)))) ;
     opacity: var(--progress);
 }
-/* .introduction_figure img:nth-child(1),.introduction_figure img:nth-child(2){
-    transform: scale(1.8)!important;
-} */
 .plan{
     width: 80%;
     flex: 0 0 auto;
@@ -364,7 +317,11 @@ section{
 }
 .plan_figure{
     margin: 4vh 0;
-    transform: scale(2);
+    transform: scale(1.2);
+}
+.plan_figure img{
+    /* width: 80%; */
+    height: 150px;
 }
 .heading{
     text-align: center;
@@ -423,8 +380,6 @@ section{
 }
 .box:nth-child(4).active{
     animation: floatRightEnter 0.8s cubic-bezier(1,0,0,1);
-    /* animation-delay: 0.6s; */
-    /* animation-delay: 1s; */
 }
 
 .links .box-container .box img{
@@ -491,7 +446,7 @@ section{
 #video>div{
     width:100%;
 }
-#video>div>img{
+#video>div>video{
     width:100%;
 }
 @media screen and (max-width:750px){
