--- a/CSS/home.css
+++ b/CSS/home.css
@@ -13,6 +13,22 @@ body{
     scroll-behavior: smooth;
     scroll-padding-top: 90px;/*防止导航栏覆盖*/
 }
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+
+::-webkit-scrollbar-thumb {
+    background-color: #0066ff;
+    border-radius: 32px;
+}
+
+
+::-webkit-scrollbar-track {
+    background-color: #00affa66;
+    border-radius: 32px;
+}
 /* .content-introduction::before{
 	content:"";
 	position:fixed;
