--- a/CSS/timeline.css
+++ b/CSS/timeline.css
@@ -206,6 +206,7 @@
   height: 500px;
   border-radius: 5px;
   padding: 10px;
+  border:2px solid #0080f73d;
 }
 .modal-open .modal {
   overflow-x: hidden;
